--- a/perroCartoon/PerroSVG.html
+++ b/perroCartoon/PerroSVG.html
@@ -8,6 +8,7 @@
     <title>Perro SVG</title>
 </head>
 <body>
-    
+    <object type="image/svg+xml" data="perro.svg"></object>
+    <div class="base"></div>
 </body>
 </html>
