--- a/paintSVG/paintSVG.html
+++ b/paintSVG/paintSVG.html
@@ -21,7 +21,13 @@
             </g>
         </a>
     </svg>
-    <object data="img/helado.svg" type="image/svg+xml" class="lienzo"></object>
-    <div class="control"></div>
+    <div class="container">
+        <object data="img/helado.svg" type="image/svg+xml" class="lienzo" id="lienzo"></object>
+        <div class="control">
+            <input type="color" id="color" name="color" value="#000000">
+            <span>elige un color y pinta</span>
+        </div>
+    </div>
 </body>
+<script src="script.js"></script>
 </html>
