--- a/customAmongus/customAmongus.html
+++ b/customAmongus/customAmongus.html
@@ -8,6 +8,16 @@
     <title>Personalizar Personaje Amongus</title>
 </head>
 <body>
-    
+    <main>
+        <div class="menu">
+            <div><p>Color</p></div>
+            <div><p>Hat</p></div>
+            <div><p>Pet</p></div>
+            <div><p>Skin</p></div>
+            <div><p>Game</p></div>
+        </div>
+        <div class="preview"></div>
+        <div class="items"></div>
+    </main>
 </body>
 </html>
