--- a/customAmongus/customAmongus.html
+++ b/customAmongus/customAmongus.html
@@ -16,7 +16,74 @@
             <div><p>Skin</p></div>
             <div><p>Game</p></div>
         </div>
-        <div class="preview"></div>
+        <div class="preview">
+            <svg width="250" height="380" viewBox="0 0 250 380" version="1.1" id="svg5" xml:space="preserve"
+  xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
+  <defs id="defs2">
+    <g id="hat_astronauta">
+      <path
+        style="fill:#c6baad"
+        d="M 82.5,134 C 41.4,104 61.2,43.9 100,32 c 46,-14.2 115,19.8 75,83" id="path11689" />
+      <path
+        style="fill:#f7f4ec"
+        d="M 105,120 C 67.8,108 66.8,67.5 81.3,46 97.5,22 144,23.2 168,39.6 c 33,22.9 14,85.4 1,79.4" id="path13744" />
+      <path
+        style="fill:none;stroke:#1b1910;stroke-width:10;stroke-linecap:round;stroke-linejoin:round"
+        d="M 82.5,134 C 41.4,104 61.2,43.9 100,32 c 46,-14.2 115,19.8 75,83" id="path10889" />
+      <path
+        style="fill:#37434f;stroke:#0b1218;stroke-width:10;stroke-linecap:round;stroke-linejoin:round"
+        d="m 183,94.5 c -6,8.5 -21,-5.2 -31,-4.7 -13,0.7 -26,10.2 -39,9.7 -27.1,-2 -27.7,-34 -17.9,-48 C 105,36.9 126,28.7 143,31.6 c 33,5.4 54,41.6 40,62.9 z"
+        id="path12228" />
+      <path
+        style="fill:#788faa"
+        d="m 144,50.3 c -5,-1.1 -11,1.6 -16,-0.3 -8,-3.2 -5,-11.6 3,-13.2 10,-1.9 23,2.6 32,9.5 4,3.3 2,11.2 -6,9.2 -5,-0.6 -8,-4.3 -13,-5.2 z"
+        id="path13013" />
+      <path
+        style="fill:#ad3418"
+        d="m 81.5,147 -4,-14 C 110,109 144,103 179,111 v 14 c -35,-6 -64,2 -97.5,22 z" id="path14033" />
+      <path
+        style="fill:#ffffff;fill-opacity:0.209"
+        d="m 98.5,119 c 0,0 10.5,11 15.5,10 25,-5 43,-6 66,-4 v -14 c -23,-8 -55,-3 -81.5,8 z" id="path14158" />
+      <path
+        style="fill:none;stroke:#180802;stroke-width:8;stroke-linecap:round;stroke-linejoin:round"
+        d="M 79.7,146 75,132 c 32,-24 71,-29 106,-21 l -3,15 c -35,-6 -65,0 -98.3,20 z" id="path13800" />
+  </g>
+  </defs>
+  <g id="personaje">
+    <ellipse
+      style="fill:#000000;fill-opacity:0.498"
+      id="path1140" cx="135" cy="344" rx="86.3" ry="16.4" />
+    <path id="path983"
+      style="fill:#ffff00"
+      d="m 135,111 c -18,0 -34,6 -43.5,17 -8,9 -12.9,27 -15.7,50 v 0 c -11.3,0 -16.6,1 -26.1,4 -16.2,5 -13.2,98 -0.5,110 11.6,7 18.5,4 26.7,4 1.3,16 3.1,30 5.2,43 22.9,8 32.9,8 48.9,-3 5,-18 6,-38 6,-38 l 15,1 c 3,24 6,32 12,36 12,2 24,1 31,-3 l 7,-36 c 6,-30 11,-136 -13,-162 -16,-16 -35,-23 -53,-23 z" />
+    <path
+      style="display:inline;fill:#000000;fill-opacity:0.337"
+      d="m 75.9,296 c 1.4,18 3.4,30 5.2,43 16.4,7 34.9,9 48.9,-3 l 6,-38 15,1 c -1,13 0,23 7,35 10,2 26,3 36,-2 13,-44 10,-90 11,-135 -2,31 -8,55 -18,67 -24,12 -59,11 -73,3 -17.6,-7 -34.1,-118 -14,-147 -16.7,18 -22,36 -24.2,58 -1.2,8 -2.9,25 -7,24 -9.7,-1 -19.4,2 -29.2,8 -3.4,28 -0.5,55 9.6,82 8.2,4 16.6,7 26.7,4"
+      id="path409" />
+    <path id="path1391"
+      style="fill:none;stroke:#000000;stroke-width:10;stroke-linecap:round;stroke-linejoin:round"
+      d="m 135,111 c -18,0 -34,6 -43.5,17 -8,9 -12.9,27 -15.7,50 v 0 c -11.3,0 -16.6,1 -26.1,4 -16.2,5 -13.2,98 -0.5,110 11.6,7 18.5,4 26.7,4 1.3,16 2.6,33 5.2,43 12.1,7 35.9,5 48.9,-3 4,-4 6,-38 6,-38 l 15,1 c 3,24 1,31 7,35 12,2 32,3 36,-2 3,-4 6,-24 7,-36 2,-22 11,-136 -13,-162 -16,-16 -35,-23 -53,-23 z" />
+    <path
+      style="fill:#000000"
+      d="m 153,303 c 12,-2 18,-5 24,-11 -9,2 -16,2 -25,2 z" id="path4546" />
+    <path
+      style="fill:#008000;stroke:#000000;stroke-width:10;stroke-linecap:round;stroke-linejoin:round"
+      d="M 75.9,296 C 72.3,243 72.8,205 75.8,178" id="path426" />
+    <g id="g294">
+      <path
+        style="fill:#4a646d;stroke:#000000;stroke-width:10;stroke-linecap:round;stroke-linejoin:round"
+        d="m 130,207 c 19,12 79,3 85,-15 3,-12 1,-32 -16,-39 -17,-9 -66,-9 -74,0 -10,4 -11,46 5,54 z" id="path1393" />
+      <path
+        style="fill:#94c9db"
+        d="m 131,155 c 6,31 13,32 41,31 12,0 29,0 39,-8 -1,-16 -12,-23 -31,-25 -17,-2 -35,-4 -49,2 z" id="path1395" />
+      <path
+        style="fill:#fefefe"
+        d="m 159,171 c 8,3 34,3 37,2 3,-1 3,-9 -2,-11 -10,-5 -21,-8 -34,-6 -8,4 -8,12 -1,15 z" id="path4077" />
+    </g>
+  </g>
+  <use href="#hat_astronauta" />
+</svg>
+        </div>
         <div class="items"></div>
     </main>
 </body>
