--- a/customAmongus/customAmongus.html
+++ b/customAmongus/customAmongus.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    
     <title>Personalizar Personaje Amongus</title>
 </head>
 <body>
@@ -17,74 +18,179 @@
             <div><p>Game</p></div>
         </div>
         <div class="preview">
-            <svg width="250" height="380" viewBox="0 0 250 380" version="1.1" id="svg5" xml:space="preserve"
-  xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
-  <defs id="defs2">
-    <g id="hat_astronauta">
-      <path
-        style="fill:#c6baad"
-        d="M 82.5,134 C 41.4,104 61.2,43.9 100,32 c 46,-14.2 115,19.8 75,83" id="path11689" />
-      <path
-        style="fill:#f7f4ec"
-        d="M 105,120 C 67.8,108 66.8,67.5 81.3,46 97.5,22 144,23.2 168,39.6 c 33,22.9 14,85.4 1,79.4" id="path13744" />
-      <path
-        style="fill:none;stroke:#1b1910;stroke-width:10;stroke-linecap:round;stroke-linejoin:round"
-        d="M 82.5,134 C 41.4,104 61.2,43.9 100,32 c 46,-14.2 115,19.8 75,83" id="path10889" />
-      <path
-        style="fill:#37434f;stroke:#0b1218;stroke-width:10;stroke-linecap:round;stroke-linejoin:round"
-        d="m 183,94.5 c -6,8.5 -21,-5.2 -31,-4.7 -13,0.7 -26,10.2 -39,9.7 -27.1,-2 -27.7,-34 -17.9,-48 C 105,36.9 126,28.7 143,31.6 c 33,5.4 54,41.6 40,62.9 z"
-        id="path12228" />
-      <path
-        style="fill:#788faa"
-        d="m 144,50.3 c -5,-1.1 -11,1.6 -16,-0.3 -8,-3.2 -5,-11.6 3,-13.2 10,-1.9 23,2.6 32,9.5 4,3.3 2,11.2 -6,9.2 -5,-0.6 -8,-4.3 -13,-5.2 z"
-        id="path13013" />
-      <path
-        style="fill:#ad3418"
-        d="m 81.5,147 -4,-14 C 110,109 144,103 179,111 v 14 c -35,-6 -64,2 -97.5,22 z" id="path14033" />
-      <path
-        style="fill:#ffffff;fill-opacity:0.209"
-        d="m 98.5,119 c 0,0 10.5,11 15.5,10 25,-5 43,-6 66,-4 v -14 c -23,-8 -55,-3 -81.5,8 z" id="path14158" />
-      <path
-        style="fill:none;stroke:#180802;stroke-width:8;stroke-linecap:round;stroke-linejoin:round"
-        d="M 79.7,146 75,132 c 32,-24 71,-29 106,-21 l -3,15 c -35,-6 -65,0 -98.3,20 z" id="path13800" />
-  </g>
-  </defs>
-  <g id="personaje">
-    <ellipse
-      style="fill:#000000;fill-opacity:0.498"
-      id="path1140" cx="135" cy="344" rx="86.3" ry="16.4" />
-    <path id="path983"
-      style="fill:#ffff00"
-      d="m 135,111 c -18,0 -34,6 -43.5,17 -8,9 -12.9,27 -15.7,50 v 0 c -11.3,0 -16.6,1 -26.1,4 -16.2,5 -13.2,98 -0.5,110 11.6,7 18.5,4 26.7,4 1.3,16 3.1,30 5.2,43 22.9,8 32.9,8 48.9,-3 5,-18 6,-38 6,-38 l 15,1 c 3,24 6,32 12,36 12,2 24,1 31,-3 l 7,-36 c 6,-30 11,-136 -13,-162 -16,-16 -35,-23 -53,-23 z" />
-    <path
-      style="display:inline;fill:#000000;fill-opacity:0.337"
-      d="m 75.9,296 c 1.4,18 3.4,30 5.2,43 16.4,7 34.9,9 48.9,-3 l 6,-38 15,1 c -1,13 0,23 7,35 10,2 26,3 36,-2 13,-44 10,-90 11,-135 -2,31 -8,55 -18,67 -24,12 -59,11 -73,3 -17.6,-7 -34.1,-118 -14,-147 -16.7,18 -22,36 -24.2,58 -1.2,8 -2.9,25 -7,24 -9.7,-1 -19.4,2 -29.2,8 -3.4,28 -0.5,55 9.6,82 8.2,4 16.6,7 26.7,4"
-      id="path409" />
-    <path id="path1391"
-      style="fill:none;stroke:#000000;stroke-width:10;stroke-linecap:round;stroke-linejoin:round"
-      d="m 135,111 c -18,0 -34,6 -43.5,17 -8,9 -12.9,27 -15.7,50 v 0 c -11.3,0 -16.6,1 -26.1,4 -16.2,5 -13.2,98 -0.5,110 11.6,7 18.5,4 26.7,4 1.3,16 2.6,33 5.2,43 12.1,7 35.9,5 48.9,-3 4,-4 6,-38 6,-38 l 15,1 c 3,24 1,31 7,35 12,2 32,3 36,-2 3,-4 6,-24 7,-36 2,-22 11,-136 -13,-162 -16,-16 -35,-23 -53,-23 z" />
-    <path
-      style="fill:#000000"
-      d="m 153,303 c 12,-2 18,-5 24,-11 -9,2 -16,2 -25,2 z" id="path4546" />
-    <path
-      style="fill:#008000;stroke:#000000;stroke-width:10;stroke-linecap:round;stroke-linejoin:round"
-      d="M 75.9,296 C 72.3,243 72.8,205 75.8,178" id="path426" />
-    <g id="g294">
-      <path
-        style="fill:#4a646d;stroke:#000000;stroke-width:10;stroke-linecap:round;stroke-linejoin:round"
-        d="m 130,207 c 19,12 79,3 85,-15 3,-12 1,-32 -16,-39 -17,-9 -66,-9 -74,0 -10,4 -11,46 5,54 z" id="path1393" />
-      <path
-        style="fill:#94c9db"
-        d="m 131,155 c 6,31 13,32 41,31 12,0 29,0 39,-8 -1,-16 -12,-23 -31,-25 -17,-2 -35,-4 -49,2 z" id="path1395" />
-      <path
-        style="fill:#fefefe"
-        d="m 159,171 c 8,3 34,3 37,2 3,-1 3,-9 -2,-11 -10,-5 -21,-8 -34,-6 -8,4 -8,12 -1,15 z" id="path4077" />
-    </g>
-  </g>
-  <use href="#hat_astronauta" />
-</svg>
+            <svg width="200" viewBox="0 0 250 380" version="1.1" id="svg5" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
+              <symbol id="hat_astronauta">
+                  <path style="fill:#c6baad"
+                    d="M 82.5,134 C 41.4,104 61.2,43.9 100,32 c 46,-14.2 115,19.8 75,83" id="path11689" />
+                  <path style="fill:#f7f4ec"
+                    d="M 105,120 C 67.8,108 66.8,67.5 81.3,46 97.5,22 144,23.2 168,39.6 c 33,22.9 14,85.4 1,79.4" id="path13744" />
+                  <path style="fill:none;stroke:#1b1910;stroke-width:10;stroke-linecap:round;stroke-linejoin:round"
+                    d="M 82.5,134 C 41.4,104 61.2,43.9 100,32 c 46,-14.2 115,19.8 75,83" id="path10889" />
+                  <path style="fill:#37434f;stroke:#0b1218;stroke-width:10;stroke-linecap:round;stroke-linejoin:round"
+                    d="m 183,94.5 c -6,8.5 -21,-5.2 -31,-4.7 -13,0.7 -26,10.2 -39,9.7 -27.1,-2 -27.7,-34 -17.9,-48 C 105,36.9 126,28.7 143,31.6 c 33,5.4 54,41.6 40,62.9 z"
+                    id="path12228"/>
+                  <path style="fill:#788faa"
+                    d="m 144,50.3 c -5,-1.1 -11,1.6 -16,-0.3 -8,-3.2 -5,-11.6 3,-13.2 10,-1.9 23,2.6 32,9.5 4,3.3 2,11.2 -6,9.2 -5,-0.6 -8,-4.3 -13,-5.2 z"
+                    id="path13013"/>
+                  <path style="fill:#ad3418"
+                    d="m 81.5,147 -4,-14 C 110,109 144,103 179,111 v 14 c -35,-6 -64,2 -97.5,22 z" id="path14033" />
+                  <path style="fill:#ffffff;fill-opacity:0.209"
+                    d="m 98.5,119 c 0,0 10.5,11 15.5,10 25,-5 43,-6 66,-4 v -14 c -23,-8 -55,-3 -81.5,8 z" id="path14158" />
+                  <path style="fill:none;stroke:#180802;stroke-width:8;stroke-linecap:round;stroke-linejoin:round"
+                    d="M 79.7,146 75,132 c 32,-24 71,-29 106,-21 l -3,15 c -35,-6 -65,0 -98.3,20 z" id="path13800" />
+              </symbol>
+              <symbol id="hat_bicho">
+                <path
+                  style="fill:#186d52"
+                  d="m 137,40.5 c 26,2.2 34,25.1 29,47 1,9.2 6,11.7 11,14.5 15,6 15,37 -8,23 -6,-6 -12,-9 -18,-2 -5,6 -15,10 -23,1 -6,-10 -12,-10 -24,1 -14.7,8 -22.9,-9 -11.5,-20 5.2,-5 11.5,-7.5 14.5,-16.5 1,-23.2 0,-48 30,-48 z"
+                  id="path11932" />
+                <path
+                  style="fill:#3fbe3f"
+                  d="m 141,43.1 c -34,-0.7 -22,46.7 -27,53.9 -4,5 -19.3,12 -16.8,19 16.8,-9 29.8,-9 40.8,7 13,4 14,-12 24,-11 7,1 14,13 20,10 5,-2 2,-15 2,-15 -5,-3 -10,-7.7 -16,-12.6 0,-10.2 3,-13.9 -1,-33.6 -7,-14 -16,-18.8 -26,-17.7 z"
+                  id="path13230" />
+                <path
+                  style="fill:none;stroke:#021902;stroke-width:10;stroke-linecap:round;stroke-linejoin:round"
+                  d="m 135,39.9 c 0,0 -12,-18.7 11,-15.9" id="path15227" />
+                <circle
+                  style="fill:#031903"
+                  id="path15803" cx="147" cy="23.5" r="7.5" />
+                <path
+                  style="fill:none;stroke:#083008;stroke-width:10;stroke-linecap:round;stroke-linejoin:round"
+                  d="m 137,40.5 c 26,2.2 34,25.1 29,47 1,9.2 6,11.7 11,14.5 15,6 15,37 -8,23 -6,-6 -12,-9 -18,-2 -5,6 -15,10 -23,1 -6,-10 -12,-10 -24,1 -14.7,8 -22.9,-9 -11.5,-20 5.2,-5 11.5,-7.5 14.5,-16.5 1,-23.2 0,-48 30,-48 z"
+                  id="path11339" />
+                <ellipse
+                  style="fill:#091815"
+                  id="path13545" cx="147" cy="70.8" rx="24.9" ry="24.3" />
+                <ellipse
+                  style="fill:#a6cbc5"
+                  id="path14220" cx="148" cy="71.1" rx="16" ry="15.6" />
+                <path
+                  style="fill:#d6ecec"
+                  d="m 140,57.5 c -8,4.2 -3,12.4 4,18.7 5,4.3 14,7.2 19,0.3 3,-14.3 -7,-25.3 -23,-19 z" id="path15805" />
+                <circle
+                  style="fill:#421a34"
+                  id="path14619" cx="150" cy="70.4" r="5.96" />
+              </symbol>
+              <symbol id="hat_jason">
+                <path
+                  style="fill:#1d1e26;stroke:#101012;stroke-width:10;stroke-linecap:round;stroke-linejoin:round"
+                  d="m 123,170 c -16,-1 -31.2,-4 -45.9,-16 -0.9,-6 -2,-13 5.3,-19 13.9,7 27.6,12 41.6,13" id="path2161" />
+                <path
+                  style="fill:#2c2d36;stroke:#101012;stroke-width:10;stroke-linecap:round;stroke-linejoin:round"
+                  d="m 141,118 -38,-6 c 7,-7 20,-12.9 29,-12.2 13,1.2 23,1.2 39,7.2" id="path5430" />
+                <path
+                  style="fill:#b5aa9f"
+                  d="m 121,161 c 2,35 21,53 49,55 22,1 40,-15 42,-54 -5,-42 -23,-54 -46,-56 -46,14 -42,35 -45,55 z" id="path6202" />
+                <path
+                  style="fill:#d3d0c6"
+                  d="m 144,116 c -22,25 -11,63 5,75 3,-6 7,-11 6,-24 2,-6 4,-4 10,-2 5,2 11,1 15,-6 0,5 2,10 -6,11 h -11 c 3,8 3,17 3,25 10,3 14,2 19,0 1,-7 1,-10 2,-23 1,-13 7,15 7,28 12,-9 16,-29 15,-53 -5,-26 -20,-34 -36,-39 -10,-3 -20,0 -29,8 z"
+                  id="path6534" />
+                <path
+                  style="fill:#b5aa9f"
+                  d="m 141,142 c -1,-1 -3,-1 0,-4 5,-2 11,-3 20,0 4,1 6,-3 7,-4 1,5 0,9 -5,11 -7,-2 -15,-4 -22,-3 z"
+                  id="path9252" />
+                <path
+                  style="fill:#b5aa9f"
+                  d="m 177,146 c -3,-2 -2,-6 0,-11 2,7 6,7 9,8 z" id="path9254" />
+                <ellipse
+                  style="fill:#b5aa9f"
+                  id="path9998" cx="164" cy="126" rx="2.83" ry="2.3" />
+                <ellipse
+                  style="fill:#b5aa9f"
+                  id="path10000" cx="178" cy="126" rx="2.65" ry="2.3" />
+                <path
+                  style="fill:#f72842;stroke:#5a1c21;stroke-width:5;stroke-linecap:round;stroke-linejoin:round"
+                  d="m 142,154 c -6,-1 -7,-8 -2,-11 11,-3 23,1 25,4 2,3 0,10 -23,7 z" id="path7059" />
+                <path
+                  style="fill:#f72842;stroke:#5a1c21;stroke-width:5;stroke-linecap:round;stroke-linejoin:round"
+                  d="m 177,148 c 0,4 13,8 19,5 3,-1 2,-9 0,-10 -8,-3 -19,2 -19,5 z" id="path8357" />
+                <path
+                  style="fill:none;stroke:#20201b;stroke-width:10;stroke-linecap:round;stroke-linejoin:round"
+                  d="m 121,161 c -1,35 21,53 49,55 22,1 44,-15 42,-54 -2,-41 -26,-57 -46,-56 -49,4 -44,38 -45,55 z" id="path364" />
+                <path
+                  style="fill:#2c2d36"
+                  d="m 112,164 c -7,-1 -13.6,-3 -20.6,-7 l 1.7,-12 c 3.8,2 9.9,4 18.9,7" id="path5432" />
+                <ellipse
+                  style="fill:#212018"
+                  id="path8411" cx="164" cy="186" rx="4.4" ry="3.53" />
+                <ellipse
+                  style="fill:#212018"
+                  id="ellipse9192" cx="163" cy="174" rx="4.4" ry="3.53" />
+                <ellipse
+                  style="fill:#212018"
+                  id="ellipse9194" cx="182" cy="174" rx="4.4" ry="3.53" />
+                <ellipse
+                  style="fill:#212018"
+                  id="ellipse9196" cx="183" cy="186" rx="4.4" ry="3.53" />
+                <path
+                  style="fill:#eeebe7"
+                  d="m 170,164 c -2,-4 -1,-8 -1,-13 1,-1 3,-1 4,0 -1,4 0,6 1,7 3,1 5,1 5,2 -1,2 -7,8 -9,4 z" id="path10071" />
+                <path
+                  style="fill:#eeebe7"
+                  d="m 174,113 c 9,0 23,13 22,15 -1,1 -8,0 -15,-4 -7,-6 -7,-9 -7,-11 z" id="path10595" />
+              </symbol>
+
+              <g id="personaje">
+                <ellipse style="fill:#000000;fill-opacity:0.498" id="path1140" cx="135" cy="344" rx="86.3" ry="16.4" />
+                <path id="characterColor" style="fill:var(--colorRed)"
+                  d="m 135,111 c -18,0 -34,6 -43.5,17 -8,9 -12.9,27 -15.7,50 v 0 c -11.3,0 -16.6,1 -26.1,4 -16.2,5 -13.2,98 -0.5,110 11.6,7 18.5,4 26.7,4 1.3,16 3.1,30 5.2,43 22.9,8 32.9,8 48.9,-3 5,-18 6,-38 6,-38 l 15,1 c 3,24 6,32 12,36 12,2 24,1 31,-3 l 7,-36 c 6,-30 11,-136 -13,-162 -16,-16 -35,-23 -53,-23 z" />
+                <path style="display:inline;fill:#000000;fill-opacity:0.337"
+                  d="m 75.9,296 c 1.4,18 3.4,30 5.2,43 16.4,7 34.9,9 48.9,-3 l 6,-38 15,1 c -1,13 0,23 7,35 10,2 26,3 36,-2 13,-44 10,-90 11,-135 -2,31 -8,55 -18,67 -24,12 -59,11 -73,3 -17.6,-7 -34.1,-118 -14,-147 -16.7,18 -22,36 -24.2,58 -1.2,8 -2.9,25 -7,24 -9.7,-1 -19.4,2 -29.2,8 -3.4,28 -0.5,55 9.6,82 8.2,4 16.6,7 26.7,4"
+                  id="path409"/>
+                <path id="path1391" style="fill:none;stroke:#000000;stroke-width:10;stroke-linecap:round;stroke-linejoin:round"
+                  d="m 135,111 c -18,0 -34,6 -43.5,17 -8,9 -12.9,27 -15.7,50 v 0 c -11.3,0 -16.6,1 -26.1,4 -16.2,5 -13.2,98 -0.5,110 11.6,7 18.5,4 26.7,4 1.3,16 2.6,33 5.2,43 12.1,7 35.9,5 48.9,-3 4,-4 6,-38 6,-38 l 15,1 c 3,24 1,31 7,35 12,2 32,3 36,-2 3,-4 6,-24 7,-36 2,-22 11,-136 -13,-162 -16,-16 -35,-23 -53,-23 z" />
+                <path style="fill:#000000"
+                  d="m 153,303 c 12,-2 18,-5 24,-11 -9,2 -16,2 -25,2 z" id="path4546"/>
+                <path style="fill:none;stroke:#000000;stroke-width:10;stroke-linecap:round;stroke-linejoin:round"
+                  d="M 75.9,296 C 72.3,243 72.8,205 75.8,178" id="path426"/>
+                <g id="g294">
+                  <path style="fill:#4a646d;stroke:#000000;stroke-width:10;stroke-linecap:round;stroke-linejoin:round"
+                    d="m 130,207 c 19,12 79,3 85,-15 3,-12 1,-32 -16,-39 -17,-9 -66,-9 -74,0 -10,4 -11,46 5,54 z" id="path1393" />
+                  <path style="fill:#94c9db"
+                    d="m 131,155 c 6,31 13,32 41,31 12,0 29,0 39,-8 -1,-16 -12,-23 -31,-25 -17,-2 -35,-4 -49,2 z" id="path1395" />
+                  <path style="fill:#fefefe"
+                    d="m 159,171 c 8,3 34,3 37,2 3,-1 3,-9 -2,-11 -10,-5 -21,-8 -34,-6 -8,4 -8,12 -1,15 z" id="path4077" />
+                </g>
+              </g>
+            <use href="#hat_astronauta"/>
+          </svg>
         </div>
-        <div class="items"></div>
+        <div class="items">
+          <div class="colors">
+            <div class="color color--1" data-name="color-selector" data-value="colorRed"></div>
+            <div class="color color--2" data-name="color-selector" data-value="colorBlue"></div>
+            <div class="color color--3" data-name="color-selector" data-value="colorGreen"></div>
+            <div class="color color--4" data-name="color-selector" data-value="colorPink"></div>
+            <div class="color color--5" data-name="color-selector" data-value="colorOrange"></div>
+            <div class="color color--6" data-name="color-selector" data-value="colorYellow"></div>
+            <div class="color color--7" data-name="color-selector" data-value="colorBlack"></div>
+            <div class="color color--8" data-name="color-selector" data-value="colorWhite"></div>
+            <div class="color color--9" data-name="color-selector" data-value="colorPurple"></div>
+            <div class="color color--10" data-name="color-selector" data-value="colorBrown"></div>
+            <div class="color color--11" data-name="color-selector" data-value="colorCyan"></div>
+            <div class="color color--12" data-name="color-selector" data-value="colorLime"></div>
+          </div>
+          <div class="hats">
+            <div data-name="color-selector"></div>
+            <div>
+              <svg viewBox="10 10 220 150">
+                <use href="#hat_astronauta"/>
+              </svg>
+            </div>
+            <div data-name="color-selector">
+              <svg viewBox="10 0 250 150">
+                <use href="#hat_bicho"/>
+              </svg>
+            </div>
+            <div>
+              <svg viewBox="30 40 220 220">
+                <use href="#hat_jason"/>
+              </svg>
+            </div>
+            
+          </div>
+        </div>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
