--- a/customAmongus/customAmongus.html
+++ b/customAmongus/customAmongus.html
@@ -39,18 +39,18 @@
     <div class="items items--background">
 
       <div class="colors active" data-name="panel">
-        <div class="color color--1 selected" data-name="color" data-value="colorRed"></div>
-        <div class="color color--2" data-name="color" data-value="colorBlue"></div>
-        <div class="color color--3" data-name="color" data-value="colorGreen"></div>
-        <div class="color color--4" data-name="color" data-value="colorPink"></div>
-        <div class="color color--5" data-name="color" data-value="colorOrange"></div>
-        <div class="color color--6" data-name="color" data-value="colorYellow"></div>
-        <div class="color color--7" data-name="color" data-value="colorBlack"></div>
-        <div class="color color--8" data-name="color" data-value="colorWhite"></div>
-        <div class="color color--9" data-name="color" data-value="colorPurple"></div>
-        <div class="color color--10" data-name="color" data-value="colorBrown"></div>
-        <div class="color color--11" data-name="color" data-value="colorCyan"></div>
-        <div class="color color--12" data-name="color" data-value="colorLime"></div>
+        <div class="color__red selected" data-name="color" data-value="colorRed"></div>
+        <div class="color__blue" data-name="color" data-value="colorBlue"></div>
+        <div class="color__green" data-name="color" data-value="colorGreen"></div>
+        <div class="color__pink" data-name="color" data-value="colorPink"></div>
+        <div class="color__orange" data-name="color" data-value="colorOrange"></div>
+        <div class="color__yellow" data-name="color" data-value="colorYellow"></div>
+        <div class="color__black" data-name="color" data-value="colorBlack"></div>
+        <div class="color__white" data-name="color" data-value="colorWhite"></div>
+        <div class="color__purple" data-name="color" data-value="colorPurple"></div>
+        <div class="color__brown" data-name="color" data-value="colorBrown"></div>
+        <div class="color__cyan" data-name="color" data-value="colorCyan"></div>
+        <div class="color__lime" data-name="color" data-value="colorLime"></div>
       </div>
 
       <div class="hats" data-name="panel">
@@ -78,6 +78,14 @@
         <div><svg data-name="hat" data-value="hat_policia"><use href="img/hats.svg#option_hat_policia"/></svg></div>
         <div><svg data-name="hat" data-value="hat_svensson"><use href="img/hats.svg#option_hat_svensson"/></svg></div>
         <div><svg data-name="hat" data-value="hat_proteccion"><use href="img/hats.svg#option_hat_proteccion"/></svg></div>
+        <div data-name="hat" data-value="default"></div>
+        <div data-name="hat" data-value="default"></div>
+        <div data-name="hat" data-value="default"></div>
+        <div data-name="hat" data-value="default"></div>
+        <div data-name="hat" data-value="default"></div>
+        <div data-name="hat" data-value="default"></div>
+        <div data-name="hat" data-value="default"></div>
+        <div data-name="hat" data-value="default"></div>
       </div>
       
       <div class="pets" data-name="panel">
@@ -85,6 +93,14 @@
         <div><svg data-name="pet" data-value="pet_doggy"><use href="img/pets.svg#option_pet_doggy"/></svg></div>
         <div><svg data-name="pet" data-value="pet_ovni"><use href="img/pets.svg#option_pet_ovni"/></svg></div>
         <div><svg data-name="pet" data-value="pet_robot"><use href="img/pets.svg#option_pet_robot"/></svg></div>
+        <div data-name="pet" data-value="default"></div>
+        <div data-name="pet" data-value="default"></div>
+        <div data-name="pet" data-value="default"></div>
+        <div data-name="pet" data-value="default"></div>
+        <div data-name="pet" data-value="default"></div>
+        <div data-name="pet" data-value="default"></div>
+        <div data-name="pet" data-value="default"></div>
+        <div data-name="pet" data-value="default"></div>
       </div>
 
       <div class="skins" data-name="panel">
@@ -99,6 +115,15 @@
         <div><svg data-name="skin" data-value="skin_calabaza"><use href="img/skins.svg#option_skin_calabaza"/></svg></div>
         <div><svg data-name="skin" data-value="skin_arbusto"><use href="img/skins.svg#option_skin_arbusto"/></svg></div>
         <div><svg data-name="skin" data-value="skin_hotdog"><use href="img/skins.svg#option_skin_hotdog"/></svg></div>
+        <div data-name="skin" data-value="default"></div>
+        <div data-name="skin" data-value="default"></div>
+        <div data-name="skin" data-value="default"></div>
+        <div data-name="skin" data-value="default"></div>
+        <div data-name="skin" data-value="default"></div>
+        <div data-name="skin" data-value="default"></div>
+        <div data-name="skin" data-value="default"></div>
+        <div data-name="skin" data-value="default"></div>
+        <div data-name="skin" data-value="default"></div>
       </div>
     </div>
   </main>
