add viewbox in svg elements

--- a/customAmongus/customAmongus.html
+++ b/customAmongus/customAmongus.html
@@ -55,29 +55,29 @@
 
       <div class="hats" data-name="panel">
         <div class="selected" data-name="hat" data-value="default"></div>
-        <div><svg data-name="hat" data-value="hat_astronauta"><use href="img/hats.svg#option_hat_astronauta"/></svg></div>
-        <div><svg data-name="hat" data-value="hat_bicho"><use href="img/hats.svg#option_hat_bicho"/></svg></div>
-        <div><svg data-name="hat" data-value="hat_jason"><use href="img/hats.svg#option_hat_jason"/></svg></div>
-        <div><svg data-name="hat" data-value="hat_bat"><use href="img/hats.svg#option_hat_bat"/></svg></div>
-        <div><svg data-name="hat" data-value="hat_chocolate"><use href="img/hats.svg#option_hat_chocolate"/></svg></div>
-        <div><svg data-name="hat" data-value="hat_cornamenta"><use href="img/hats.svg#option_hat_cornamenta"/></svg></div>
-        <div><svg data-name="hat" data-value="hat_corona"><use href="img/hats.svg#option_hat_corona"/></svg></div>
-        <div><svg data-name="hat" data-value="hat_cuchillo"><use href="img/hats.svg#option_hat_cuchillo"/></svg></div>
-        <div><svg data-name="hat" data-value="hat_calabaza"><use href="img/hats.svg#option_hat_calabaza"/></svg></div>
-        <div><svg data-name="hat" data-value="hat_egg"><use href="img/hats.svg#option_hat_egg"/></svg></div>
-        <div><svg data-name="hat" data-value="hat_devil"><use href="img/hats.svg#option_hat_devil"/></svg></div>
-        <div><svg data-name="hat" data-value="hat_drPeste"><use href="img/hats.svg#option_hat_drPeste"/></svg></div>
-        <div><svg data-name="hat" data-value="hat_vagabond"><use href="img/hats.svg#option_hat_vagabond"/></svg></div>
-        <div><svg data-name="hat" data-value="hat_sopapa"><use href="img/hats.svg#option_hat_sopapa"/></svg></div>
-        <div><svg data-name="hat" data-value="hat_rider"><use href="img/hats.svg#option_hat_rider"/></svg></div>
-        <div><svg data-name="hat" data-value="hat_punk"><use href="img/hats.svg#option_hat_punk"/></svg></div>
-        <div><svg data-name="hat" data-value="hat_medic"><use href="img/hats.svg#option_hat_medic"/></svg></div>
-        <div><svg data-name="hat" data-value="hat_headache"><use href="img/hats.svg#option_hat_headache"/></svg></div>
-        <div><svg data-name="hat" data-value="hat_ellieRose"><use href="img/hats.svg#option_hat_ellieRose"/></svg></div>
-        <div><svg data-name="hat" data-value="hat_militar"><use href="img/hats.svg#option_hat_militar"/></svg></div>
-        <div><svg data-name="hat" data-value="hat_policia"><use href="img/hats.svg#option_hat_policia"/></svg></div>
-        <div><svg data-name="hat" data-value="hat_svensson"><use href="img/hats.svg#option_hat_svensson"/></svg></div>
-        <div><svg data-name="hat" data-value="hat_proteccion"><use href="img/hats.svg#option_hat_proteccion"/></svg></div>
+        <div><svg data-name="hat" data-value="hat_astronauta" viewBox="0 0 60 60"><use href="img/hats.svg#option_hat_astronauta"/></svg></div>
+        <div><svg data-name="hat" data-value="hat_bicho" viewBox="0 0 60 60"><use href="img/hats.svg#option_hat_bicho"/></svg></div>
+        <div><svg data-name="hat" data-value="hat_jason" viewBox="0 0 60 60"><use href="img/hats.svg#option_hat_jason"/></svg></div>
+        <div><svg data-name="hat" data-value="hat_bat" viewBox="0 0 60 60"><use href="img/hats.svg#option_hat_bat"/></svg></div>
+        <div><svg data-name="hat" data-value="hat_chocolate" viewBox="0 0 60 60"><use href="img/hats.svg#option_hat_chocolate"/></svg></div>
+        <div><svg data-name="hat" data-value="hat_cornamenta" viewBox="0 0 60 60"><use href="img/hats.svg#option_hat_cornamenta"/></svg></div>
+        <div><svg data-name="hat" data-value="hat_corona" viewBox="0 0 60 60"><use href="img/hats.svg#option_hat_corona"/></svg></div>
+        <div><svg data-name="hat" data-value="hat_cuchillo" viewBox="0 0 60 60"><use href="img/hats.svg#option_hat_cuchillo"/></svg></div>
+        <div><svg data-name="hat" data-value="hat_calabaza" viewBox="0 0 60 60"><use href="img/hats.svg#option_hat_calabaza"/></svg></div>
+        <div><svg data-name="hat" data-value="hat_egg" viewBox="0 0 60 60"><use href="img/hats.svg#option_hat_egg"/></svg></div>
+        <div><svg data-name="hat" data-value="hat_devil" viewBox="0 0 60 60"><use href="img/hats.svg#option_hat_devil"/></svg></div>
+        <div><svg data-name="hat" data-value="hat_drPeste" viewBox="0 0 60 60"><use href="img/hats.svg#option_hat_drPeste"/></svg></div>
+        <div><svg data-name="hat" data-value="hat_vagabond" viewBox="0 0 60 60"><use href="img/hats.svg#option_hat_vagabond"/></svg></div>
+        <div><svg data-name="hat" data-value="hat_sopapa" viewBox="0 0 60 60"><use href="img/hats.svg#option_hat_sopapa"/></svg></div>
+        <div><svg data-name="hat" data-value="hat_rider" viewBox="0 0 60 60"><use href="img/hats.svg#option_hat_rider"/></svg></div>
+        <div><svg data-name="hat" data-value="hat_punk" viewBox="0 0 60 60"><use href="img/hats.svg#option_hat_punk"/></svg></div>
+        <div><svg data-name="hat" data-value="hat_medic" viewBox="0 0 60 60"><use href="img/hats.svg#option_hat_medic"/></svg></div>
+        <div><svg data-name="hat" data-value="hat_headache" viewBox="0 0 60 60"><use href="img/hats.svg#option_hat_headache"/></svg></div>
+        <div><svg data-name="hat" data-value="hat_ellieRose" viewBox="0 0 60 60"><use href="img/hats.svg#option_hat_ellieRose"/></svg></div>
+        <div><svg data-name="hat" data-value="hat_militar" viewBox="0 0 60 60"><use href="img/hats.svg#option_hat_militar"/></svg></div>
+        <div><svg data-name="hat" data-value="hat_policia" viewBox="0 0 60 60"><use href="img/hats.svg#option_hat_policia"/></svg></div>
+        <div><svg data-name="hat" data-value="hat_svensson" viewBox="0 0 60 60"><use href="img/hats.svg#option_hat_svensson"/></svg></div>
+        <div><svg data-name="hat" data-value="hat_proteccion" viewBox="0 0 60 60"><use href="img/hats.svg#option_hat_proteccion"/></svg></div>
         <div data-name="hat" data-value="default"></div>
         <div data-name="hat" data-value="default"></div>
         <div data-name="hat" data-value="default"></div>
@@ -90,9 +90,9 @@
       
       <div class="pets" data-name="panel">
         <div class="selected" data-name="pet" data-value="default"></div>
-        <div><svg data-name="pet" data-value="pet_doggy"><use href="img/pets.svg#option_pet_doggy"/></svg></div>
-        <div><svg data-name="pet" data-value="pet_ovni"><use href="img/pets.svg#option_pet_ovni"/></svg></div>
-        <div><svg data-name="pet" data-value="pet_robot"><use href="img/pets.svg#option_pet_robot"/></svg></div>
+        <div><svg data-name="pet" data-value="pet_doggy" viewBox="0 0 60 60"><use href="img/pets.svg#option_pet_doggy"/></svg></div>
+        <div><svg data-name="pet" data-value="pet_ovni" viewBox="0 0 60 60"><use href="img/pets.svg#option_pet_ovni"/></svg></div>
+        <div><svg data-name="pet" data-value="pet_robot" viewBox="0 0 60 60"><use href="img/pets.svg#option_pet_robot"/></svg></div>
         <div data-name="pet" data-value="default"></div>
         <div data-name="pet" data-value="default"></div>
         <div data-name="pet" data-value="default"></div>
@@ -105,16 +105,16 @@
 
       <div class="skins" data-name="panel">
         <div class="selected" data-name="skin" data-value="default"></div>
-        <div><svg data-name="skin" data-value="skin_kid"><use href="img/skins.svg#option_skin_kid"/></svg></div>
-        <div><svg data-name="skin" data-value="skin_sport"><use href="img/skins.svg#option_skin_sport"/></svg></div>
-        <div><svg data-name="skin" data-value="skin_sport2"><use href="img/skins.svg#option_skin_sport2"/></svg></div>
-        <div><svg data-name="skin" data-value="skin_banana"><use href="img/skins.svg#option_skin_banana"/></svg></div>
-        <div><svg data-name="skin" data-value="skin_momia"><use href="img/skins.svg#option_skin_momia"/></svg></div>
-        <div><svg data-name="skin" data-value="skin_astronauta"><use href="img/skins.svg#option_skin_astronauta"/></svg></div>
-        <div><svg data-name="skin" data-value="skin_gift"><use href="img/skins.svg#option_skin_gift"/></svg></div>
-        <div><svg data-name="skin" data-value="skin_calabaza"><use href="img/skins.svg#option_skin_calabaza"/></svg></div>
-        <div><svg data-name="skin" data-value="skin_arbusto"><use href="img/skins.svg#option_skin_arbusto"/></svg></div>
-        <div><svg data-name="skin" data-value="skin_hotdog"><use href="img/skins.svg#option_skin_hotdog"/></svg></div>
+        <div><svg data-name="skin" data-value="skin_kid" viewBox="0 0 60 60"><use href="img/skins.svg#option_skin_kid"/></svg></div>
+        <div><svg data-name="skin" data-value="skin_sport" viewBox="0 0 60 60"><use href="img/skins.svg#option_skin_sport"/></svg></div>
+        <div><svg data-name="skin" data-value="skin_sport2" viewBox="0 0 60 60"><use href="img/skins.svg#option_skin_sport2"/></svg></div>
+        <div><svg data-name="skin" data-value="skin_banana" viewBox="0 0 60 60"><use href="img/skins.svg#option_skin_banana"/></svg></div>
+        <div><svg data-name="skin" data-value="skin_momia" viewBox="0 0 60 60"><use href="img/skins.svg#option_skin_momia"/></svg></div>
+        <div><svg data-name="skin" data-value="skin_astronauta" viewBox="0 0 60 60"><use href="img/skins.svg#option_skin_astronauta"/></svg></div>
+        <div><svg data-name="skin" data-value="skin_gift" viewBox="0 0 60 60"><use href="img/skins.svg#option_skin_gift"/></svg></div>
+        <div><svg data-name="skin" data-value="skin_calabaza" viewBox="0 0 60 60"><use href="img/skins.svg#option_skin_calabaza"/></svg></div>
+        <div><svg data-name="skin" data-value="skin_arbusto" viewBox="0 0 60 60"><use href="img/skins.svg#option_skin_arbusto"/></svg></div>
+        <div><svg data-name="skin" data-value="skin_hotdog" viewBox="0 0 60 60"><use href="img/skins.svg#option_skin_hotdog"/></svg></div>
         <div data-name="skin" data-value="default"></div>
         <div data-name="skin" data-value="default"></div>
         <div data-name="skin" data-value="default"></div>
