--- a/paintSVG/paintSVG.html
+++ b/paintSVG/paintSVG.html
@@ -9,7 +9,7 @@
     <title>Paint SVG</title>
 </head>
 <body>
-    <svg class="repo-link" width="80" height="80" viewBox="0 0 250 250"
+    <svg class="repo-link" viewBox="0 0 250 250"
         xmlns="http://www.w3.org/2000/svg"
         xmlns:svg="http://www.w3.org/2000/svg">
         <title>Repositorio en Github</title>
