--- a/customAmongus/customAmongus.html
+++ b/customAmongus/customAmongus.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/repositorio.css">
+  <link rel="stylesheet" href="css/style.css">
   
   <title>Personalizar Personaje Amongus</title>
 </head>
 <body>
-  <svg class="repo-link" width="80" height="80" viewBox="0 0 250 250"
+  <svg class="repo-link" viewBox="0 0 250 250"
         xmlns="http://www.w3.org/2000/svg"
         xmlns:svg="http://www.w3.org/2000/svg">
         <title>Repositorio en Github</title>
