--- a/customAmongus/customAmongus.html
+++ b/customAmongus/customAmongus.html
@@ -33,7 +33,7 @@
     </div>
 
     <div class="preview">
-      <object data="img/character.svg" type="image/svg+xml" id="externalSVG"></object>
+      <object data="img/character2.svg" type="image/svg+xml" id="externalSVG"></object>
     </div>
 
     <div class="items items--background">
