--- a/paintSVG/paintSVG.html
+++ b/paintSVG/paintSVG.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/repositorio.css">
+    <script src="script.js" defer></script>
     <title>Paint SVG</title>
 </head>
 <body>
@@ -60,10 +61,10 @@
         
         <div class="control">
             <input type="color" id="color" name="color" value="#000000">
-            <span>elige un color y pinta</span>
+            <span>eliga un color y pinte</span>
         </div>
     </div>
 
 </body>
-<script src="script.js"></script>
+
 </html>
